--- a/pages/work.html
+++ b/pages/work.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>
             <div class="cardContentWork">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>            
         </div>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>
             <div class="cardContentWork">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>            
         </div>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>
             <div class="cardContentWork">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>            
         </div>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>
             <div class="cardContentWork">
@@ -146,7 +146,7 @@
                 </div>
                 <div class="yearCardWork"><h3>2023</h3>
                 </div>
-                <div><a href="#"><img src="../img/icon/arrow-long-green-right.svg"></a>
+                <div><a href="../pages/work/giardino-boboli.html"><img src="../img/icon/arrow-long-green-right.svg"></a>
                 </div> 
             </div>            
         </div>
