--- a/pages/work.html
+++ b/pages/work.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/buj4rmf.css">
-    <title>Juana Alvarez Work</title>
+    <title>Juana Alvarez Work test test</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="bgGreen">
