ultimas modificaciones en la pagina work

--- a/pages/work.html
+++ b/pages/work.html
@@ -38,7 +38,7 @@
                 <li><a href="#">Web design</a></li>
             </ul>
         </div>
-        <div class="workContent">
+        <div class="workContent paddingTop">
             <div class="cardContentWork">
                 <div>
                     <image class="imgWork" src="../img/work/gallerieUffizi-2.jpg" alt="go to project"> </image>
