--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="yearCard"><h3>2023</h3>
                     </div>
-                    <div><a href="#"><img src="img/icon/arrow-long-white-right.svg"></a>
+                    <div><a href="pages/work/giardino-boboli.html"><img src="img/icon/arrow-long-white-right.svg"></a>
                     </div> 
                 </div>
                 <div class="card" class="img-fluid" style="background-image: url(img/work/giardinoBoboli.png);">
@@ -49,7 +49,7 @@
                     </div>
                     <div class="yearCard"><h3>2023</h3>
                     </div>
-                    <div><a href="#"><img src="img/icon/arrow-long-white-right.svg"></a>
+                    <div><a href="pages/work/giardino-boboli.html"><img src="img/icon/arrow-long-white-right.svg"></a>
                     </div> 
                 </div>
                 <div class="card" class="img-fluid" style="background-image: url(img/work/orienteOccidente.png);">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="yearCard"><h3>2023</h3>
                     </div>
-                    <div><a href="#"><img src="img/icon/arrow-long-white-right.svg"></a>
+                    <div><a href="pages/work/giardino-boboli.html"><img src="img/icon/arrow-long-white-right.svg"></a>
                     </div> 
                 </div>
                 <div class="card" class="img-fluid" style="background-image: url(img/work/snaiSanSiro.png);">
@@ -69,12 +69,12 @@
                     </div>
                     <div class="yearCard"><h3>2023</h3>
                     </div>
-                    <div><a href="#"><img src="img/icon/arrow-long-white-right.svg"></a>
+                    <div><a href="pages/work/giardino-boboli.html"><img src="img/icon/arrow-long-white-right.svg"></a>
                     </div> 
                 </div>
             </div>
             <div class="ctaIndex">
-                <p><a href="#"> Explore all projects</a></p>
+                <p><a href="pages/work.html"> Explore all projects</a></p>
                 <image src="img/icon/arrow-long-green-right.svg" alt="go to project"></image>   
             </div>
         </main>
